Added a tameable Dimetrodon

--- a/src/main/resources/assets/jurassicraft/lang/en_US.lang
+++ b/src/main/resources/assets/jurassicraft/lang/en_US.lang
@@ -13,3 +13,4 @@ entity.Parasaurolophus.name=Parasaurolophus
 entity.Stegosaur.name=Stegosaur
 entity.Triceratops.name=Triceratops
 entity.Tyrannosaurus.name=Tyrannosaurus Rex
+entity.Dimetrodon.name=Dimetrodon
