--- a/src/main/resources/assets/jurassicraft/lang/en_US.lang
+++ b/src/main/resources/assets/jurassicraft/lang/en_US.lang
@@ -4,18 +4,7 @@ itemGroup.fossilTab=JurassiCraft
 //entities
 entity.Ankylosaur.name=Ankylosaurus
 entity.Brachiosaur.name=Brachiosaurus
-entity.Coelacanth.name=Coelacanth
-entity.Gallimimus.name=Gallimimus
-entity.Herrerasaur.name=Herrerasaurus
-entity.Hypsilophodon.name=Hypsilophodon
-entity.Leaellynasaur.name=Leaellynasaurus
-entity.Liopleurodon.name=Liopleurodon
-entity.Meganeura.name=Meganeura
-entity.Parasaurolophus.name=Parasaurolophus
-entity.Stegosaur.name=Stegosaurus
-entity.Triceratops.name=Triceratops
-entity.Tyrannosaurus.name=Tyrannosaurus Rex
-entity.Dimetrodon.name=Dimetrodon
+entity.Velociraptor.name=Velociraptor
 
 //items
 item.dinoBone.name=Dinosaur Bone
