--- a/src/main/resources/assets/jurassicraft/lang/en_US.lang
+++ b/src/main/resources/assets/jurassicraft/lang/en_US.lang
@@ -31,10 +31,37 @@ item.Stegosaur_Meat.name=Stegosaurus Meat
 item.Stegosaur_DNA.name=Stegosaurus DNA
 item.Triceratops_Meat.name=Triceratops Meat
 item.Triceratops-DNA.name=Triceratops DNA
-item.Coelacanth_Meat.name=Dead Coelacanth
+item.Coelacanth_Meat.name=Raw Coelacanth
 item.Coelacanth_DNA.name=Coelacanth DNA
 item.Tyrannosaurus_DNA.name=Tyrannosaurus Rex DNA
+item.Tyrannosaurus_Meat.name=Tyrannosaurus Rex Meat
+item.Gallimimus_Meat.name=Gallimimus Meat
+item.Gallimimus_DNA.name=Gallimimus DNA
+item.Leaellynasaur_Meat.name=Leaellynasaura Meat
+item.Leaellynasaur_DNA.name=Leaellynasaura DNA
+item.Hypsilophodon_Meat.name=Hyspilophodon Meat
+item.Hypsilophodon_DNA.name=Hyspilophodon DNA
+item.Tylosaurus_Meat.name=Tylosaurus Meat
+item.Tylosaurus_DNA.name=Tylosaurus DNA
+item.Meganeura_Meat.name=Raw Meganeura
+item.Meganeura_DNA.name=Meganeura DNA
+item.Herrerasaur_Meat.name=Herrerasaurus Meat
+item.Herrerasaur_DNA.name=Herrerasaurus DNA
+item.Parasaurolophus_Meat.name=Parasaurolophus Meat
+item.Parasaurolophus_DNA.name=Parasaurolophus DNA
+item.Dilophosaurus_Meat.name=Dilophosaurus Meat
+item.Dilophosaurus_DNA.name=Dilophosaurus DNA
+item.Oviraptor_Meat=Oviraptor Meat
+item.Oviraptor_DNA=Oviraptor DNA
 
 /blocks
 tile.cultivate_idle.name=Cultivate
 tile.analyzer_idle.name=Analyzer
+tile.fossil_sandstone_ore.name=Sandstone Fossil Ore
+tile.fossil_clay_ore.name=Clay Fossil Ore
+tile.fossil_clay_ore_stained_brown.name= Brown Stained Clay Fossil Ore
+tile.fossil_clay_ore_stained_orange.name=Orange Stained Clay Fossil Ore
+tile.fossil_clay_ore_stained_red.name=Red Stained Clay Fossil Ore
+tile.fossil_clay_ore_stained_silver.name=Silver Stained Clay Fossil Ore
+tile.fossil_clay_ore_stained_white.name=White Stained Clay Fossil Ore
+tile.fossil_clay_ore_stained_yellow.name=Yellow Stained Clay Fossil Ore
