--- a/src/main/resources/assets/jurassicraft/lang/en_US.lang
+++ b/src/main/resources/assets/jurassicraft/lang/en_US.lang
@@ -9,7 +9,7 @@ entity.Leaellynasaur.name=Leaellynasaura
 entity.Herrerasaur.name=Herrerasaurus
 entity.Parasaurolophus.name=Parasaurolophus
 entity.Meganeura.name=Meganeura
-entity.Dilophosaurus=Dilophosaurus
+entity.Dilophosaurus.name=Dilophosaurus
 entity.Tylosaurus.name=Tylosaurus
 entity.Oviraptor.name=Oviraptor
 entity.Tyrannosaurus.name=Tyrannosaurus Rex
@@ -31,7 +31,7 @@ item.Velociraptor_DNA.name=Velociraptor DNA
 item.Stegosaur_Meat.name=Stegosaurus Meat
 item.Stegosaur_DNA.name=Stegosaurus DNA
 item.Triceratops_Meat.name=Triceratops Meat
-item.Triceratops-DNA.name=Triceratops DNA
+item.Triceratops_DNA.name=Triceratops DNA
 item.Coelacanth_Meat.name=Raw Coelacanth
 item.Coelacanth_DNA.name=Coelacanth DNA
 item.Tyrannosaurus_DNA.name=Tyrannosaurus Rex DNA
