--- a/src/main/resources/assets/jurassicraft/lang/en_US.lang
+++ b/src/main/resources/assets/jurassicraft/lang/en_US.lang
@@ -14,7 +14,7 @@ entity.Tylosaurus.name=Tylosaurus
 entity.Oviraptor.name=Oviraptor
 entity.Tyrannosaurus.name=Tyrannosaurus Rex
 entity.Gallimimus.name=Gallimimus
-entity.Hypsilophodon.name=Hyspilophodon
+entity.Hypsilophodon.name=Hypsilophodon
 entity.Coelacanth.name=Coelacanth
 entity.Triceratops.name=Triceratops
 entity.Stegosaur.name=Stegosaurus
@@ -40,8 +40,8 @@ item.Gallimimus_Meat.name=Gallimimus Meat
 item.Gallimimus_DNA.name=Gallimimus DNA
 item.Leaellynasaur_Meat.name=Leaellynasaura Meat
 item.Leaellynasaur_DNA.name=Leaellynasaura DNA
-item.Hypsilophodon_Meat.name=Hyspilophodon Meat
-item.Hypsilophodon_DNA.name=Hyspilophodon DNA
+item.Hypsilophodon_Meat.name=Hypsilophodon Meat
+item.Hypsilophodon_DNA.name=Hypsilophodon DNA
 item.Tylosaurus_Meat.name=Tylosaurus Meat
 item.Tylosaurus_DNA.name=Tylosaurus DNA
 item.Meganeura_Meat.name=Raw Meganeura
@@ -52,8 +52,9 @@ item.Parasaurolophus_Meat.name=Parasaurolophus Meat
 item.Parasaurolophus_DNA.name=Parasaurolophus DNA
 item.Dilophosaurus_Meat.name=Dilophosaurus Meat
 item.Dilophosaurus_DNA.name=Dilophosaurus DNA
-item.Oviraptor_Meat=Oviraptor Meat
-item.Oviraptor_DNA=Oviraptor DNA
+item.Oviraptor_Meat.name=Oviraptor Meat
+item.Oviraptor_DNA.name=Oviraptor DNA
+item.Tylosaurus_Meat.name=Tylosaurus Meat
 
 /blocks
 tile.cultivate_idle.name=Cultivate
