--- a/src/main/resources/assets/jurassicraft/lang/en_US.lang
+++ b/src/main/resources/assets/jurassicraft/lang/en_US.lang
@@ -55,6 +55,22 @@ item.Dilophosaurus_DNA.name=Dilophosaurus DNA
 item.Oviraptor_Meat.name=Oviraptor Meat
 item.Oviraptor_DNA.name=Oviraptor DNA
 item.Tylosaurus_Meat.name=Tylosaurus Meat
+item.egg_Brachiosaur.name=Egg of a Brachiosaurus
+item.egg_Velociraptor.name=Egg of a Velociraptor
+item.egg_Ankylosaur.name=Egg of an Ankylosaurus
+item.egg_Stegosaur.name=Egg of a Stegosaurus
+item.egg_Triceratops.name=Egg of a Triceratops
+item.egg_Coelacanth.name=Egg of a Coelacanth
+item.egg_Tyrannosaurus.name=Egg of a Tyrannosaurus Rex
+item.egg_Oviraptor.name=Egg of an Oviraptor
+item.egg_Dilophosaurus.name=Egg of a Dilophosaurus
+item.egg_Parasaurolophus.name=Egg of a Parasaurolophus
+item.egg_Herrerasaur.name=Egg of a Herrerasaurus
+item.egg_Meganeura.name=Egg of a Meganeura
+item.egg_Tylosaurus.name=Egg of a Tylosaurus
+item.egg_Hypsilophodon.name=Egg of a Hypsilophodon
+item.egg_Leaellynasaur.name=Egg of a Leaellynasaurus
+item.egg_Gallimimus.name=Egg of a Gallimimus
 
 /blocks
 tile.cultivate_idle.name=Cultivate
@@ -67,3 +83,5 @@ tile.fossil_clay_ore_stained_red.name=Red Stained Clay Fossil Ore
 tile.fossil_clay_ore_stained_silver.name=Silver Stained Clay Fossil Ore
 tile.fossil_clay_ore_stained_white.name=White Stained Clay Fossil Ore
 tile.fossil_clay_ore_stained_yellow.name=Yellow Stained Clay Fossil Ore
+
+entity.dino_egg.name=Dino Egg
