--- a/src/main/resources/assets/jurassicraft/lang/en_US.lang
+++ b/src/main/resources/assets/jurassicraft/lang/en_US.lang
@@ -69,7 +69,7 @@ item.egg_Herrerasaur.name=Egg of a Herrerasaurus
 item.egg_Meganeura.name=Egg of a Meganeura
 item.egg_Tylosaurus.name=Egg of a Tylosaurus
 item.egg_Hypsilophodon.name=Egg of a Hypsilophodon
-item.egg_Leaellynasaur.name=Egg of a Leaellynasaurus
+item.egg_Leaellynasaur.name=Egg of a Leaellynasaura
 item.egg_Gallimimus.name=Egg of a Gallimimus
 
 /blocks
