--- a/src/main/resources/assets/jurassicraft/lang/en_US.lang
+++ b/src/main/resources/assets/jurassicraft/lang/en_US.lang
@@ -12,7 +12,7 @@ entity.Meganeura.name=Meganeura
 entity.Dilophosaurus.name=Dilophosaurus
 entity.Tylosaurus.name=Tylosaurus
 entity.Oviraptor.name=Oviraptor
-entity.Tyrannosaurus.name=Tyrannosaurus Rex
+entity.Tyrannosaurus.name=Tyrannosaurus rex
 entity.Gallimimus.name=Gallimimus
 entity.Hypsilophodon.name=Hypsilophodon
 entity.Coelacanth.name=Coelacanth
