--- a/src/main/resources/assets/jurassicraft/lang/en_US.lang
+++ b/src/main/resources/assets/jurassicraft/lang/en_US.lang
@@ -34,8 +34,8 @@ item.Triceratops_Meat.name=Triceratops Meat
 item.Triceratops_DNA.name=Triceratops DNA
 item.Coelacanth_Meat.name=Raw Coelacanth
 item.Coelacanth_DNA.name=Coelacanth DNA
-item.Tyrannosaurus_DNA.name=Tyrannosaurus Rex DNA
-item.Tyrannosaurus_Meat.name=Tyrannosaurus Rex Meat
+item.Tyrannosaurus_DNA.name=Tyrannosaurus rex DNA
+item.Tyrannosaurus_Meat.name=Tyrannosaurus rex Meat
 item.Gallimimus_Meat.name=Gallimimus Meat
 item.Gallimimus_DNA.name=Gallimimus DNA
 item.Leaellynasaur_Meat.name=Leaellynasaura Meat
@@ -61,7 +61,7 @@ item.egg_Ankylosaur.name=Egg of an Ankylosaurus
 item.egg_Stegosaur.name=Egg of a Stegosaurus
 item.egg_Triceratops.name=Egg of a Triceratops
 item.egg_Coelacanth.name=Egg of a Coelacanth
-item.egg_Tyrannosaurus.name=Egg of a Tyrannosaurus Rex
+item.egg_Tyrannosaurus.name=Egg of a Tyrannosaurus rex
 item.egg_Oviraptor.name=Egg of an Oviraptor
 item.egg_Dilophosaurus.name=Egg of a Dilophosaurus
 item.egg_Parasaurolophus.name=Egg of a Parasaurolophus
