Replacing Analyzer by DNA Extractor + DNA quality
Added dna quality to the ItemDNA. Each amber now gives a 100% quality
dna, and fossil gives 25%, 50%, 75%, or 100%.

Remade analyzer.

--- a/src/main/resources/assets/jurassicraft/lang/en_US.lang
+++ b/src/main/resources/assets/jurassicraft/lang/en_US.lang
@@ -74,7 +74,7 @@ item.egg_Gallimimus.name=Egg of a Gallimimus
 
 /blocks
 tile.cultivate_idle.name=Cultivate
-tile.analyzer_idle.name=Analyzer
+tile.dnaExtractor.name=DNA Extractor
 tile.fossil_sandstone_ore.name=Sandstone Fossil Ore
 tile.fossil_clay_ore.name=Clay Fossil Ore
 tile.fossil_clay_ore_stained_brown.name= Brown Stained Clay Fossil Ore
