--- a/src/main/resources/assets/jurassicraft/lang/en_US.lang
+++ b/src/main/resources/assets/jurassicraft/lang/en_US.lang
@@ -19,6 +19,8 @@ entity.Coelacanth.name=Coelacanth
 entity.Triceratops.name=Triceratops
 entity.Stegosaur.name=Stegosaurus
 entity.Dilophosaurus.name=Dilophosaurus
+entity.Cearadactylus.name=Cearadactylus
+entity.Sarcosuchus.name=Sarcosuchus
 
 //items
 item.dinoBone.name=Dinosaur Bone
@@ -55,6 +57,10 @@ item.Dilophosaurus_DNA.name=Dilophosaurus DNA
 item.Oviraptor_Meat.name=Oviraptor Meat
 item.Oviraptor_DNA.name=Oviraptor DNA
 item.Tylosaurus_Meat.name=Tylosaurus Meat
+item.Cearadactylus_Meat.name=Cearadactylus Meat
+item.Cearadactylus_DNA.name=Cearadactylus DNA
+item.Sarcosuchus_Meat.name=Sarcosuchus Meat
+item.Sarcosuchus_DNA.name=Sarcosuchus DNA
 item.egg_Brachiosaur.name=Egg of a Brachiosaurus
 item.egg_Velociraptor.name=Egg of a Velociraptor
 item.egg_Ankylosaur.name=Egg of an Ankylosaurus
@@ -71,6 +77,8 @@ item.egg_Tylosaurus.name=Egg of a Tylosaurus
 item.egg_Hypsilophodon.name=Egg of a Hypsilophodon
 item.egg_Leaellynasaur.name=Egg of a Leaellynasaura
 item.egg_Gallimimus.name=Egg of a Gallimimus
+item.egg_Cearadactylus.name=Egg of a Cearadactylus
+item.egg_Sarcosuchus.name=Egg of a Sarcosuchus
 
 /blocks
 tile.cultivate_idle.name=Cultivate
