Fence fixing implemented
Breaking still need some work...

--- a/src/main/resources/assets/jurassicraft/lang/en_US.lang
+++ b/src/main/resources/assets/jurassicraft/lang/en_US.lang
@@ -112,8 +112,7 @@ container.directionWest=West
 container.directionNorth=North
 container.directionEast=East
 container.directionInexistent=Not defined
-container.ironingots=Iron ingots
-container.redstone=Redstone
+container.fixFence=Fix Fence
 container.fencebasesblocks=Bases
 container.fencegridsblocks=Grids
 container.fencepolesblocks=Poles
