--- a/src/main/resources/assets/jurassicraft/lang/en_US.lang
+++ b/src/main/resources/assets/jurassicraft/lang/en_US.lang
@@ -1,5 +1,6 @@
 //creativeTab
-itemGroup.fossilTab=JurassiCraft
+itemGroup.jc.blocks=JurassiCraft Blocks
+itemGroup.jc.items=JurassiCraft Items
 
 //entities
 entity.dino_egg.name=Dino Egg
