Dinopad buttons + Herd AI (Still need some work)
Note: the AI is not implemented yet, so no dinosaur uses it.

--- a/src/main/resources/assets/jurassicraft/lang/en_US.lang
+++ b/src/main/resources/assets/jurassicraft/lang/en_US.lang
@@ -89,7 +89,7 @@ item.dinopad.name=Dinopad
 tile.cultivate_idle.name=Cultivate
 tile.dnaExtractor.name=DNA Extractor
 tile.dnaCombinator.name=DNA Combinator
-tile.security_Fence_Base.name=Security Fence Base
+tile.security_Fence_Main.name=Security Fence Base
 tile.fossil_sandstone_ore.name=Sandstone Fossil Ore
 tile.fossil_clay_ore.name=Clay Fossil Ore
 tile.fossil_clay_ore_stained_brown.name= Brown Stained Clay Fossil Ore
