--- a/src/main/resources/assets/jurassicraft/lang/en_US.lang
+++ b/src/main/resources/assets/jurassicraft/lang/en_US.lang
@@ -26,6 +26,7 @@ entity.Sarcosuchus.name=Sarcosuchus
 
 //Items
 item.dinoBone.name=Dinosaur Bone
+item.dinoSteak.name=Dinosaur Steak
 item.Ankylosaur_Meat.name=Ankylosaurus Meat
 item.Ankylosaur_DNA.name=Ankylosaurus DNA
 item.Brachiosaur_Meat.name=Brachiosaurus Meat
@@ -85,7 +86,7 @@ item.growthSerum.name=Growth Serum
 item.gypsumPowder.name=Gypsum Powder
 item.dinopad.name=Dinopad
 
-/Blocks
+//Blocks
 tile.cultivate_idle.name=Cultivate
 tile.dnaExtractor.name=DNA Extractor
 tile.dnaCombinator.name=DNA Combinator
@@ -102,7 +103,11 @@ tile.block_Gypsum_Block.name=Gypsum Block
 tile.block_Gypsum_Brick.name=Gypsum Brick
 tile.block_Gypsum_CobbleStone.name=Gypsum Cobblestone
 
-/Containers
+//Entity_Interaction
+entity.Interaction.isSitting=is sitting
+entity.Interaction.isNotSitting=is not sitting anymore
+
+//Containers
 container.dnaExtractor=DNA Extractor
 container.dnaCombinator=DNA Combinator
 container.securityFenceInexistent=Nothing built yet
@@ -137,7 +142,7 @@ container.pad.maxHealth=Maximum Health
 container.pad.maxLength=Maximum Length
 container.pad.maxHeight=Maximum Height
 
-/Dinosaur info
+//Dinosaur info
 container.pad.infoAnkylosaur.page1=Ankylosaurus ("fused lizard") is a genus of ankylosaurid dinosaur. Fossils of Ankylosaurus are found in geologic formations dating to the very end of the Cretaceous period, between 66.5 and 66.0 million years ago, in western North America.
 container.pad.infoAnkylosaur.page2=Ankylosaurus was a large animal by modern standards, estimated at lengths of 9 m (30 ft) and weighing up to 6 tonnes (13,000 lb). The whole animal is estimated at 6.25 m (20.5 feet) long, 1.5 m (4.9 feet) wide and 1.7 m (5.6 feet) tall at the hip.
 container.pad.infoAnkylosaur.page3=The tail club of Ankylosaurus is composed of several large osteoderms, which are fused to the last few tail vertebrae. It was heavy and supported by the last seven tail vertebrae, which interlocked to form a stiff rod at the base of the club.
