Fossil ores fixed + DNA extractor renders items now

--- a/src/main/resources/assets/jurassicraft/lang/en_US.lang
+++ b/src/main/resources/assets/jurassicraft/lang/en_US.lang
@@ -96,7 +96,7 @@ tile.fossil_clay_ore.name=Clay Fossil Ore
 tile.fossil_clay_ore_stained_brown.name= Brown Stained Clay Fossil Ore
 tile.fossil_clay_ore_stained_orange.name=Orange Stained Clay Fossil Ore
 tile.fossil_clay_ore_stained_red.name=Red Stained Clay Fossil Ore
-tile.fossil_clay_ore_stained_silver.name=Silver Stained Clay Fossil Ore
+tile.fossil_clay_ore_stained_silver.name=Light Gray Stained Clay Fossil Ore
 tile.fossil_clay_ore_stained_white.name=White Stained Clay Fossil Ore
 tile.fossil_clay_ore_stained_yellow.name=Yellow Stained Clay Fossil Ore
 tile.block_Gypsum_Block.name=Gypsum Block
