--- a/src/main/resources/assets/jurassicraft/lang/en_US.lang
+++ b/src/main/resources/assets/jurassicraft/lang/en_US.lang
@@ -2,7 +2,7 @@
 itemGroup.jc.blocks=JurassiCraft Blocks
 itemGroup.jc.items=JurassiCraft Items
 
-//Entities
+//Entities_Egg_Creatures
 entity.dino_egg.name=Dino Egg
 entity.Ankylosaur.name=Ankylosaurus
 entity.Brachiosaur.name=Brachiosaurus
@@ -23,11 +23,25 @@ entity.Stegosaur.name=Stegosaurus
 entity.Dilophosaurus.name=Dilophosaurus
 entity.Cearadactylus.name=Cearadactylus
 entity.Sarcosuchus.name=Sarcosuchus
+entity.Titanis.name=Titanis
+
+//Entities_Syringe_Creatures
 entity.Mammoth.name=Mammoth
+entity.Arsinoitherium.name=Arsinoitherium
+entity.Basilosaurus.name=Basilosaurus
+entity.Leptictidium.name=Leptictidium
+entity.Uintatherium.name=Uintatherium
+entity.Paraceratherium.name=Paraceratherium
+entity.Deinotherium.name=Deinotherium
 
 //Items
 item.dinoBone.name=Dinosaur Bone
 item.dinoSteak.name=Dinosaur Steak
+item.growthSerum.name=Growth Serum
+item.gypsumPowder.name=Gypsum Powder
+item.dinopad.name=Dinopad
+
+//Items_Egg_Creatures
 item.Ankylosaur_Meat.name=Ankylosaurus Meat
 item.Ankylosaur_DNA.name=Ankylosaurus DNA
 item.Brachiosaur_Meat.name=Brachiosaurus Meat
@@ -60,11 +74,13 @@ item.Dilophosaurus_Meat.name=Dilophosaurus Meat
 item.Dilophosaurus_DNA.name=Dilophosaurus DNA
 item.Oviraptor_Meat.name=Oviraptor Meat
 item.Oviraptor_DNA.name=Oviraptor DNA
-item.Tylosaurus_Meat.name=Tylosaurus Meat
 item.Cearadactylus_Meat.name=Cearadactylus Meat
 item.Cearadactylus_DNA.name=Cearadactylus DNA
 item.Sarcosuchus_Meat.name=Sarchosuchus Meat
 item.Sarcosuchus_DNA.name=Sarchosuchus DNA
+item.Titanis_Meat.name=Titanis Meat
+item.Titanis_DNA.name=Titanis DNA
+
 item.egg_Brachiosaur.name=Egg of a Brachiosaurus
 item.egg_Velociraptor.name=Egg of a Velociraptor
 item.egg_Ankylosaur.name=Egg of an Ankylosaurus
@@ -83,10 +99,32 @@ item.egg_Leaellynasaur.name=Egg of a Leaellynasaura
 item.egg_Gallimimus.name=Egg of a Gallimimus
 item.egg_Cearadactylus.name=Egg of a Cearadactylus
 item.egg_Sarcosuchus.name=Egg of a Sarcosuchus
+item.egg_Titanis.name=Egg of a Titanis
+
+//Items_Syringe_Creatures
+item.Mammoth_Meat.name=Mammoth Meat
+item.Mammoth_DNA.name=Mammoth DNA
+item.Arsinoitherium_Meat.name=Arsinoitherium Meat
+item.Arsinoitherium_DNA.name=Arsinoitherium DNA
+item.Basilosaurus_Meat.name=Basilosaurus Meat
+item.Basilosaurus_DNA.name=Basilosaurus DNA
+item.Leptictidium_Meat.name=Leptictidium Meat
+item.Leptictidium_DNA.name=Leptictidium DNA
+item.Uintatherium_Meat.name=Uintatherium Meat
+item.Uintatherium_DNA.name=Uintatherium DNA
+item.Paraceratherium_Meat.name=Paraceratherium Meat
+item.Paraceratherium_DNA.name=Paraceratherium DNA
+item.Deinotherium_Meat.name=Deinotherium Meat
+item.Deinotherium_DNA.name=Deinotherium DNA
+
 item.syringe_Mammoth.name=Syringe of Mammoth
-item.growthSerum.name=Growth Serum
-item.gypsumPowder.name=Gypsum Powder
-item.dinopad.name=Dinopad
+item.syringe_Arsinoitherium.name=Syringe of Arsinoitherium
+item.syringe_Basilosaurus.name=Syringe of Basilosaurus
+item.syringe_Leptictidium.name=Syringe of Leptictidium
+item.syringe_Uintatherium.name=Syringe of Uintatherium
+item.syringe_Paraceratherium.name=Syringe of Paraceratherium
+item.syringe_Deinotherium.name=Syringe of Deinotherium
+
 
 //Blocks
 tile.cultivate_idle.name=Cultivate
@@ -105,9 +143,11 @@ tile.block_Gypsum_Block.name=Gypsum Block
 tile.block_Gypsum_Brick.name=Gypsum Brick
 tile.block_Gypsum_CobbleStone.name=Gypsum Cobblestone
 
+
 //Entity_Interaction
 entity.Interaction.isSitting=is sitting
 entity.Interaction.isNotSitting=is not sitting anymore
+
 
 //Containers
 container.cultivator.stopCultivating=Stop cultivating
@@ -146,13 +186,18 @@ container.pad.none=none
 container.pad.maxHealth=Maximum Health
 container.pad.maxLength=Maximum Length
 container.pad.maxHeight=Maximum Height
+container.pad.pragnancy.pragnantCow=Pragnant Cow
+container.pad.pragnancy.pragnantPig=Pragnant Pig
+container.pad.pragnancy.pragnantHorse=Pragnant Horse
+container.pad.pragnancy.pragnantSheep=Pragnant Sheep
+container.pad.pragnancy.cow=Cow
+container.pad.pragnancy.pig=Pig
+container.pad.pragnancy.horse=Horse
+container.pad.pragnancy.sheep=Sheep
+container.pad.pragnancy.noEmbryo=No embryo
 
-container.pad.pragnancy.cow=Pragnant Cow
-container.pad.pragnancy.pig=Pragnant Pig
-container.pad.pragnancy.horse=Pragnant Horse
-container.pad.pragnancy.sheep=Pragnant Sheep
 
-//Dinosaur info
+//Creature_Dinopad_Info
 container.pad.infoAnkylosaur.page1=Ankylosaurus ("fused lizard") is a genus of ankylosaurid dinosaur. Fossils of Ankylosaurus are found in geologic formations dating to the very end of the Cretaceous period, between 66.5 and 66.0 million years ago, in western North America.
 container.pad.infoAnkylosaur.page2=Ankylosaurus was a large animal by modern standards, estimated at lengths of 9 m (30 ft) and weighing up to 6 tonnes (13,000 lb). The whole animal is estimated at 6.25 m (20.5 feet) long, 1.5 m (4.9 feet) wide and 1.7 m (5.6 feet) tall at the hip.
 container.pad.infoAnkylosaur.page3=The tail club of Ankylosaurus is composed of several large osteoderms, which are fused to the last few tail vertebrae. It was heavy and supported by the last seven tail vertebrae, which interlocked to form a stiff rod at the base of the club.
@@ -175,3 +220,12 @@ container.pad.infoOviraptor.page1=Oviraptor
 container.pad.infoCearadactylus.page1=Cearadactylus
 container.pad.infoSarcosuchus.page1=Sarcosuchus
 container.pad.infoMammoth.page1=Mammoth
+container.pad.infoArsinoitherium.page1=Arsinoitherium
+container.pad.infoBasilosaurus.page1=Basilosaurus
+container.pad.infoLeptictidium.page1=Leptictidium
+container.pad.infoTitanis.page1=Titanis
+container.pad.infoUintatherium.page1=Uintatherium
+container.pad.infoParaceratherium.page1=Paraceratherium
+container.pad.infoDeinotherium.page1=Deinotherium
+
+
